WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257629
[IFC][line-clamp](REGRESSION) Yahoo.com: Words are cutoff on article titles
https://bugs.webkit.org/show_bug.cgi?id=257629
Summary
[IFC][line-clamp](REGRESSION) Yahoo.com: Words are cutoff on article titles
zalan
Reported
2023-06-01 16:49:03 PDT
<
rdar://110018946
>
Attachments
[fast-cq]Patch
(11.36 KB, patch)
2023-06-01 18:33 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-06-01 18:33:21 PDT
Created
attachment 466567
[details]
[fast-cq]Patch
EWS
Comment 2
2023-06-02 05:47:34 PDT
Committed
264828@main
(521f0038f2b3): <
https://commits.webkit.org/264828@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466567
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug